--- a/scss/five-block-general-page.scss
+++ b/scss/five-block-general-page.scss
@@ -1,7 +1,7 @@
 .five-block-general-page {
     display: grid;
     border: var(--border);
-    grid-template-columns: repeat(3, 475px);
+    grid-template-columns: repeat(3, 466px);
     grid-template-rows: 50px 50px;
     margin-left: 20px;
     margin-top: 120px;
@@ -10,19 +10,22 @@
 }
 
 .item-one-five-block {
-    border: var(--border);
+    border-bottom: var(--border);
 }
 .input-email-form{
-    width: 417px;
+    width: 466px;
     height: 50px;
-    border: var(--border);
-
+    border-left: var(--border);
+    border-bottom: var(--border);
 }
 .item-tree-block {
-    border: var(--border);
+    border-left: var(--border);
+    border-bottom: var(--border);
 }
 .item-four-block {
-    border: var(--border);
-    // grid-column: span 3;
+    border-right: var(--border);
+    border-left: var(--border);
+    grid-column: 2 / span 2; // со второй колонки начать и растянуть на две колонки
+    // justify-content: start;
         // grid-row: span 2;
 }
