--- a/scss/five-block-general-page.scss
+++ b/scss/five-block-general-page.scss
@@ -1,6 +1,5 @@
 .five-block-general-page {
     display: grid;
-    border: var(--border);
     grid-template-columns: repeat(3, 466px);
     grid-template-rows: 50px 50px;
     margin-left: 20px;
@@ -10,22 +9,49 @@
 }
 
 .item-one-five-block {
-    border-bottom: var(--border);
+    border: var(--border);
+    h2{
+        font-size: 20px;
+        text-align: center;
+        margin-top: 15px;
+    }
 }
-.input-email-form{
+
+.input-email-form {
     width: 466px;
     height: 50px;
-    border-left: var(--border);
+    border-top: var(--border);
     border-bottom: var(--border);
+    text-transform: uppercase;
+      font-size: 16px;  
+      padding-left: 10px;
+   
+     
 }
+
 .item-tree-block {
-    border-left: var(--border);
-    border-bottom: var(--border);
+    border: var(--border);
+    background: rgba(111, 111, 111, 0.1);
+    
+    h2{
+        font-size: 20px;
+        text-align: center;
+        margin-top: 15px;
+    }
 }
+
 .item-four-block {
     border-right: var(--border);
     border-left: var(--border);
+border-top: none;
+    border-bottom: var(--border);
     grid-column: 2 / span 2; // со второй колонки начать и растянуть на две колонки
     // justify-content: start;
-        // grid-row: span 2;
+    // grid-row: span 2;
+    h2{
+        font-size: 16px;
+        text-align: left;
+        margin-left: 10px;
+        margin-top: 15px;
+    }
 }
