--- a/scss/six-block-general-end.scss
+++ b/scss/six-block-general-end.scss
@@ -10,28 +10,42 @@
     //     border: var(--border);
     // }
 }
-.six-block-item1 {
+
+%paddings-font-size {
     font-size: 20px;
     padding-left: 10px;
     padding-top: 15px;
 }
+
+%paddings-font-size-h2 {
+    padding-left: 10px;
+    padding-top: 15px;
+
+    h2 {
+        font-size: 12px;
+    }
+}
+
+.six-block-item1 {
+    @extend %paddings-font-size;
+    line-height: 1.1em;
+}
+
 .six-block-item2 {
     border-left: var(--border);
     border-right: var(--border);
+    
 }
 
 .six-block-item3 {
-    
-    font-size: 20px;
-    padding-left: 10px;
-    padding-top: 15px;
     border-right: var(--border);
+    @extend %paddings-font-size;
+    line-height: 1.1em;
 }
 
 .six-block-item4 {
-    font-size: 20px;
-    padding-left: 10px;
-    padding-top: 15px;
+    @extend %paddings-font-size;
+    line-height: 1.1em;
 }
 
 .six-block-item5 {
@@ -39,106 +53,86 @@
 }
 
 .six-block-item6 {
-    font-size: 20px;
-    padding-left: 10px;
-    padding-top: 15px;
     border-left: var(--border);
+    @extend %paddings-font-size;
 }
 
 .six-block-item7 {
     border-top: var(--border);
-    padding-left: 10px;
-    padding-top: 15px;
-    h2{
-        font-size: 12px;
-    }
+    @extend %paddings-font-size-h2;
+    line-height: 1.1em;
 }
 
 .six-block-item8 {
-    border: var(--border);
-    padding-left: 10px;
-    padding-top: 15px;
-    h2{
-        font-size: 12px;
-    }
+    border-left: var(--border);
+    border-top: var(--border);
+    @extend %paddings-font-size-h2;
+    line-height: 1.1em;
 }
 
 .six-block-item9 {
-    border: var(--border);
-    padding-left: 10px;
-    padding-top: 15px;
-    h2{
-        font-size: 12px;
-    }
+    border-left: var(--border);
+    border-top: var(--border);
+    @extend %paddings-font-size-h2;
+    line-height: 1.1em;
 }
 
 .six-block-item10 {
-    border: var(--border);
-    padding-left: 10px;
-    padding-top: 15px;
-    h2{
-        font-size: 12px;
-    }
+    border-left: var(--border);
+    border-top: var(--border);
+    @extend %paddings-font-size-h2;
+    line-height: 1.1em;
 }
 
 .six-block-item11 {
-    border: var(--border);
-    padding-left: 10px;
-    padding-top: 15px;
-    h2{
-        font-size: 12px;
-    }
+    border-left: var(--border);
+    border-top: var(--border);
+    @extend %paddings-font-size-h2;
+    line-height: 1.1em;
 }
 
 .six-block-item12 {
-    border: var(--border);
-    padding-left: 10px;
-    padding-top: 15px;
-    h2{
-        font-size: 12px;
-    }
+    border-left: var(--border);
+    border-top: var(--border);
+    @extend %paddings-font-size-h2;
+    line-height: 1.1em;
 }
 
 .six-block-item13 {
-    border: var(--border);
+    border-top: var(--border);
+    border-right: var(--border);
     grid-column: 1 / span 2;
-    padding-left: 10px;
-    padding-top: 15px;
-    h2{
-        font-size: 12px;
-    }
+    @extend %paddings-font-size-h2;
 }
 
 
 
 .six-block-item15 {
-    border: var(--border);
-    padding-left: 10px;
-    padding-top: 15px;
-    h2{
-        font-size: 12px;
-    }
+    border-top: var(--border);
+    border-right: var(--border);
+    @extend %paddings-font-size-h2;
 }
 
 .six-block-item16 {
-    border: var(--border);
-    padding-left: 10px;
-    padding-top: 15px;
-    h2{
-        font-size: 12px;
-    }
+    border-top: var(--border);
+    border-right: var(--border);
+    @extend %paddings-font-size-h2;
 }
 
 .six-block-item17 {
-    border: var(--border);
+    border-top: var(--border);
     grid-column: 5 / span 2;
-    // align-content: center;
-    
+    padding-top: 10px;
+
+    .twitter {
+        padding-left: 157px;
+    }
+
+    .youtube {
+        padding-left: 40px;
+    }
+
+    .google {
+        padding-left: 40px;
+    }
 }
-
-.twitter {}
-
-.youtube {}
-
-.google {}
-
