--- a/scss/tree-block-general-page.scss
+++ b/scss/tree-block-general-page.scss
@@ -3,7 +3,7 @@
     grid-template-columns: repeat(2, 700px);
     grid-template-rows: 67px 411px 69px;
     border: solid 1px #6f6f6f;
-    background-color: var(--color-dark-gray);
+    background-color: var(--color-gray);
     margin-left: 20px;
     margin-top: 159px;
     margin-right: 20px;
