--- a/CSS/five-block-general-page.css
+++ b/CSS/five-block-general-page.css
@@ -24,6 +24,7 @@
   text-transform: uppercase;
   font-size: 16px;
   padding-left: 10px;
+  background: var(--color-gray);
 }
 
 .item-tree-block {
