--- a/CSS/style.css
+++ b/CSS/style.css
@@ -17,7 +17,7 @@ body {
   width: 1440px;
   height: 3500px;
   margin: 0 auto;
-  background-color: var(--color-dark-gray);
+  background-color: var(--color-gray);
 }
 
 h1,
