--- a/CSS/two-block-general-page.css
+++ b/CSS/two-block-general-page.css
@@ -3,7 +3,7 @@
   grid-template-columns: repeat(6, 233px);
   grid-template-rows: 81px 369px 369px;
   border: solid 1px #6F6F6F;
-  background-color: var(--color-dark-gray);
+  background-color: var(--color-gray);
   margin-left: 20px;
   margin-top: 120px;
   margin-right: 20px;
