--- a/scss/five-block-general-page.scss
+++ b/scss/five-block-general-page.scss
@@ -25,7 +25,7 @@
     text-transform: uppercase;
       font-size: 16px;  
       padding-left: 10px;
-   
+   background: var(--color-gray);
      
 }
 
