--- a/CSS/four-block-general.css
+++ b/CSS/four-block-general.css
@@ -4,13 +4,13 @@
   display: grid;
   grid-template-columns: repeat(2, 700px);
   grid-template-rows: 370px 48px;
-  border: solid 1px #6f6f6f;
+  border: var(--border);
   margin-left: 20px;
   margin-top: 81px;
 }
 
 .block-left-center {
-  border-right: solid 1px #6f6f6f;
+  border-right: var(--border);
   width: 700px;
   height: 370px;
 }
@@ -20,7 +20,7 @@
   height: 350px;
   margin-left: 10px;
   margin-top: 10px;
-  border: solid 1px #6f6f6f;
+  border: var(--border);
   background: url(/images/Image1-block-four-general.png) no-repeat;
 }
 
@@ -34,12 +34,12 @@
   height: 350px;
   margin-left: 10px;
   margin-top: 10px;
-  border: solid 1px #6f6f6f;
+  border: var(--border);
   background: url(/images/Image2-block-four-general-Page.png) no-repeat;
 }
 
 .block-left-bottom {
-  border: solid 1px #6f6f6f;
+  border: var(--border);
   border-left: none;
   background: url(/images/Image-Line-block-two-general-Page.png) 610px 10px no-repeat;
 }
@@ -50,7 +50,7 @@
 }
 
 .block-right-bottom {
-  border: solid 1px #6f6f6f;
+  border: var(--border);
   border-left: none;
   border-right: none;
   background: url(/images/Image-Line-block-two-general-Page.png) 610px 10px no-repeat;
