--- a/scss/one-Block-general-page.scss
+++ b/scss/one-Block-general-page.scss
@@ -14,7 +14,7 @@
     width: 912px;
     height: 600px;
     border: solid 1px #6F6F6F;
-    background-image: url(/images/block-one-general-Page.jpg);
+    background-image: url(../images/block-one-general-Page.jpg);
     margin: 10px 10px 10px 10px;
     
 }
@@ -40,10 +40,10 @@
     width: 466px;
     height: 310px;
     border-left: solid 1px #6F6F6F;
-    background: url(/images/Line-gorizontal-block-tree-general-Page.png) 0 0 no-repeat,
-        url(/images/Left-Line-block-one-general-Page.png) no-repeat,
-        url(/images/Right-Line-block-one-general-Page.png) right no-repeat,
-        url(/images/Line-vertikal-block-tree-general-Page.png) center no-repeat;
+    background: url(../images/Line-gorizontal-block-tree-general-Page.png) 0 0 no-repeat,
+        url(../images/Left-Line-block-one-general-Page.png) no-repeat,
+        url(../images/Right-Line-block-one-general-Page.png) right no-repeat,
+        url(../images/Line-vertikal-block-tree-general-Page.png) center no-repeat;
 }
 
 // добавил декоративные прерывистые картинки в первый блок
