--- a/CSS/tree-block-general-page.css
+++ b/CSS/tree-block-general-page.css
@@ -12,7 +12,7 @@
   grid-column: span 2;
   grid-row: span 1;
   border-bottom: solid 1px #6f6f6f;
-  background: url(/images/Image-Line-block-two-general-Page.png) 1300px 20px no-repeat;
+  background: url(../images/Image-Line-block-two-general-Page.png) 1300px 20px no-repeat;
 }
 .container-block3-general .item-head h2 {
   font-size: 48px;
@@ -21,7 +21,7 @@
 }
 .container-block3-general .item2-left {
   border-right: solid 1px #6f6f6f;
-  background: url(/images/Line-vertikal-block-tree-general-Page.png) 233px 0px no-repeat, url(/images/Line-gorizontal-block-tree-general-Page.png) 0px 90px no-repeat;
+  background: url(../images/Line-vertikal-block-tree-general-Page.png) 233px 0px no-repeat, url(../images/Line-gorizontal-block-tree-general-Page.png) 0px 90px no-repeat;
   display: grid;
   justify-content: end;
   align-items: end;
@@ -29,7 +29,7 @@
 .container-block3-general .item2-left .item2-left-image {
   width: 213px;
   height: 270px;
-  background: url(/images/Image1-block3-general.png) no-repeat;
+  background: url(../images/Image1-block3-general.png) no-repeat;
   background-color: hsl(0, 0%, 97%);
   margin-right: 10px;
   margin-bottom: 10px;
@@ -39,10 +39,10 @@
   display: grid;
   justify-content: end;
   align-items: end;
-  background: url(/images/Line-gorizontal-block-tree-general-Page.png) 0px 90px no-repeat;
+  background: url(../images/Line-gorizontal-block-tree-general-Page.png) 0px 90px no-repeat;
 }
 .container-block3-general .item3-right .item3-right-image {
-  background: url(/images/Image2-block3-general.png) no-repeat;
+  background: url(../images/Image2-block3-general.png) no-repeat;
   width: 213px;
   height: 270px;
   background-color: hsl(0, 0%, 97%);
